--- a/backend/BikeSegura/src/main/resources/application.properties
+++ b/backend/BikeSegura/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=BikeSegura
+
+# Server
+server.port=8080
+
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/bikesegura
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# JWT
+jwt.secret=
+jwt.expiration=86400000  # 1 dia em ms
+
+# CORS allowed origins (ajuste para o domínio do React Native)
+app.cors.allowed-origins=http://localhost:3000,http://localhost:19006
